fix image placement for cytometer

--- a/flow_cytometer/flow_cytometer.html
+++ b/flow_cytometer/flow_cytometer.html
@@ -38,21 +38,24 @@
 <li><p>On the right, click <code>Run Worklist</code></p></li>
 <li><p>Click <code>Adjust Settings</code></p></li>
 <li><p>Place your plate in the ejected tray</p></li>
-<li><p>Follow the on-screen instructions for the eppendorf tube contents <img src="images/vial_instr.png" height="120" alt="vial_instr" /><br />
-then click <code>OK</code></p></li>
+<li><p>Follow the on-screen instructions for the eppendorf tube contents</p>
+<p><img src="images/vial_instr.png" height="120" alt="vial_instr" /><br />
+</p>
+<p>then click <code>OK</code></p></li>
 <li><p>Another <code>Adjust Settings</code> panel will appear. Click a well to acquire and click <code>OK</code>. Adjust settings as necessary</p></li>
 <li><p>Click <code>Next Step</code> to proceed to the next well <img src="images/next_sample.png" height="24" alt="next_sample" /><br />
 and <code>Resume Worklist</code></p></li>
 </ol>
 <h2 id="analysis">Analysis</h2>
 <ol start="12" type="1">
-<li>Click <code>Analyse</code></li>
-<li>Select one of the samples</li>
-<li>Set the event gate by clicking on the <code>New Region</code> button on the plot and selecting the gate shape <img src="images/gate1.png" height="240" alt="gate" /><br />
-</li>
-<li>Apply the gate to plot 2 by clicking this button over there <img src="images/button.png" height="24" alt="button" /> and select either dimension</li>
-<li>Click <code>New Region</code> on plot 2 and draw a gate around the group of interest</li>
-<li>Apply the gate to plot 3 to gate the histogram</li>
+<li><p>Click <code>Analyse</code></p></li>
+<li><p>Select one of the samples</p></li>
+<li><p>Set the event gate by clicking on the <code>New Region</code> button on the plot and selecting the gate shape</p>
+<p><img src="images/gate1.png" height="240" alt="gate" /><br />
+</p></li>
+<li><p>Apply the gate to plot 2 by clicking this button over there <img src="images/button.png" height="24" alt="button" /> and select either dimension</p></li>
+<li><p>Click <code>New Region</code> on plot 2 and draw a gate around the group of interest</p></li>
+<li><p>Apply the gate to plot 3 to gate the histogram</p></li>
 </ol>
 <p>For more information see the full instruction manuals at</p>
 <p><a href="https://www.luminexcorp.com/?wpdmdl=41831">https://www.luminexcorp.com/?wpdmdl=41831</a></p>
